@startuml
title ERD - Sistem Simore (Database Schema)

' Konfigurasi tampilan agar rapi
hide circle
skinparam linetype ortho

entity "Rooms" as rooms {
  *id : INT <<PK>>
  --
  name : VARCHAR(50)
  status : ENUM('AVAILABLE', 'OCCUPIED')
  last_motion_detected : DATETIME
  updated_at : DATETIME
}

entity "Reservations" as reservations {
  *id : INT <<PK>>
  --
  *room_id : INT <<FK>>
  customer_name : VARCHAR(100)
  start_time : DATETIME
  end_time : DATETIME
  status : ENUM('ACTIVE', 'COMPLETED', 'NO_SHOW')
}

entity "Sensor_Logs" as logs {
  *id : INT <<PK>>
  --
  *room_id : INT <<FK>>
  motion_detected : BOOLEAN
  recorded_at : DATETIME
}

' Relasi antar tabel
rooms ||..o{ reservations : "has bookings"
rooms ||..o{ logs : "logs history"

@enduml